--- a/src/components/FAQ/FAQ.module.css
+++ b/src/components/FAQ/FAQ.module.css
@@ -1,17 +1,35 @@
+
 .__span_a52ab2{
     color: #FF9125 ;
     border: 2px solid #FF9125;
     border-radius: 50%;
-    width: 35px;
-    height: 35px;
+    font-size: 18px;
+    width: 24px;
+    height: 24px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-left: 20px;
+    line-height: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.__span_a52ab2:hover {
+    background-color: #FF9125;
+    color: #000;
 }
 
+.no_arrow::after {
+    display: none !important;
+  }
+
 ._button_a52ab2{
+    color: white !important;
     font-size: 20px;
+    transition: all 0.3s ease;
+}
+._button_a52ab2:hover {
+    color: #FF9125 !important;
 }
 
 ._div_a52ab2 {
@@ -31,3 +49,4 @@
     -webkit-mask-composite: destination-out;
     pointer-events: none;
   }
+
