--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -42,6 +42,11 @@
   align-items: center;
 }
 
+.socialIcon:hover {
+  background-color: rgba(239, 85, 44, 1);
+  transition: background-color 0.3s ease;
+}
+
 .footerLinks {
   flex: 1;
   padding: 0 20px;
@@ -106,3 +111,49 @@
     justify-content: center;
   }
 }
+
+
+/* ---------------------------------------- */
+.footerLinks a:hover,
+.footerContact a:hover {
+  color: rgba(239, 85, 44, 1); 
+  transition: color 0.3s ease;
+  transform: scale(1.05); 
+}
+
+.socialIcon:hover {
+  background-color: rgba(239, 85, 44, 1);
+  transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+  transform: scale(1.1); 
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
+}
+
+
+.footerContainer {
+  background-color: rgba(37, 46, 61, 0.39);
+  color: rgba(153, 153, 153, 1);
+  padding: 100px 50px;
+  height: 336px;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fadeInUp 1s forwards;
+}
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
+.footerHeading:hover {
+  color: rgba(239, 85, 44, 1);
+  transform: scale(1.1);
+  transition: transform 0.3s ease, color 0.3s ease;
+}
+
+
+
+
+
