--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -27,3 +27,22 @@
   outline: none;
   box-shadow: none;
 }
+
+.contact_us {
+  border-radius: 20px;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 6px 24px;
+}
+
+@media (max-width: 768px) {
+  .navbar_bars {
+    padding: 2px 7px;
+    font-size: 17px;
+  }
+
+  .contact_us {
+    font-size: 11px;
+    padding: 3px 15px;
+  }
+}
