--- a/src/components/Testimonial/testimonial.module.css
+++ b/src/components/Testimonial/testimonial.module.css
@@ -1,8 +1,13 @@
 .testimonial {
   position: relative;
-  padding: 16px;
   border-radius: 12px;
-  background-color: white; /* Adjust if needed */
+  min-width: 1059px;
+  height: 364px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  padding: 15px;
+  background-color: #252E3D63;
 }
 
 .testimonial::before {
