--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,14 @@
-.header_background {
+.header_styles {
   border: 1px solid rgba(190, 68, 35, 1);
   background-color: #20212369;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
+  position: fixed;
+  width: 90% !important;
+  border-radius: 30px;
+  padding: 5px 10px;
+  top: 15px;
+  z-index: 10;
 }
 .navbar_cover {
   background: linear-gradient(
@@ -35,7 +41,26 @@
   padding: 6px 24px;
 }
 
+@media (max-width: 1200px) {
+  .header_styles {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+@media (max-width: 992px) {
+  .header_styles {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
 @media (max-width: 768px) {
+  .header_styles {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
   .navbar_bars {
     padding: 2px 7px;
     font-size: 17px;
