--- a/src/components/JoinUs/joinus.module.css
+++ b/src/components/JoinUs/joinus.module.css
@@ -67,3 +67,44 @@
 .button:hover {
   background-color: #ff3b1f;
 }
+
+@media (max-width: 992px) {
+  .heroSection {
+    height: 250px;
+    width: 100%;
+  }
+  .heading {
+    font-size: 30px;
+  }
+  .text {
+    font-size: 25px;
+    width: 90%;
+  }
+
+  .button {
+    font-size: 17px;
+    padding: 9px 20px;
+  }
+}
+@media (max-width: 768px) {
+  .heroSection {
+    background-image: none;
+    height: 200px;
+    background-color: #101318;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+  }
+
+  .heading {
+    font-size: 17px;
+  }
+  .text {
+    font-size: 15px;
+    width: 70%;
+  }
+
+  .button {
+    font-size: 15px;
+    padding: 7px 15px;
+  }
+}
