--- a/src/components/FAQ/FAQ.module.css
+++ b/src/components/FAQ/FAQ.module.css
@@ -41,11 +41,13 @@
     display: none !important;
 }
 
+
 ._button_a52ab2 {
     color: white !important;
     font-size: 20px;
     transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     position: relative;
+    background-color: transparent !important;
 }
 
 ._button_a52ab2:hover {
@@ -56,6 +58,7 @@
 ._div_a52ab2 {
     position: relative;
     transition: all 0.4s ease;
+    background-color: rgba(37, 46, 61, 0.39);
 }
 
 ._div_a52ab2::before {
